atualizaçao de img

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="intro-text">
                 <div class="row">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/panda.png" class="img-responsive img-circle" alt="">
                     </div>
                 </div>
                 <div class="intro-lead-in">Gabriela Bessa Lança</div>
