--- a/index.html
+++ b/index.html
@@ -258,17 +258,17 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <a href="#">
-                        <img src="img/autocad-logo.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/cad.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <a href="#">
-                        <img src="img/revit.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/rev.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <a href="#">
-                        <img src="img/sketchup.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/ske.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
