--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#inicio">Início</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Portfólio</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Sobre</a>
@@ -81,8 +81,8 @@
                         <img src="img/gabi3.jpg" class="img-responsive img-circle" alt="">
                     </div>
                 </div>
-                <div class="intro-lead-in">Gabriela Bessa Lança</div>
-                <div class="intro-heading">Arquitetura</div>
+                <div class="intro-lead-in">Gabriela Bessa Lança - 19 anos</div>
+                <div class="intro-heading">Arquitetura e Urbanismo</div>
                 <a href="#portfolio" class="page-scroll btn btn-xl">Conte-me mais!</a>
             </div>
         </div>
@@ -94,7 +94,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
+                    <h2 class="section-heading">Portfólio</h2>
                     <h3 class="section-subheading text-muted">Projetos e Maquetes feitos por mim.</h3>
                 </div>
             </div>
@@ -163,7 +163,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Sobre</h2>
-                    <h3 class="section-subheading text-muted">Formação academica e cursos tecnicos.</h3>
+                    <h3 class="section-subheading text-muted">Formação academica e cursos técnicos.</h3>
                 </div>
             </div>
             <div class="row">
@@ -236,6 +236,8 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Loja virtual que vende roupas, artigos e convites para festa e chalkboards.</p>
+                                    <p><a target="_blank" href="https://www.facebook.com/chalkboardboaabessa/">Chalkboard</a></p>
+                                    <p><a target="_blank" href="https://www.facebook.com/boaabessa/">Vestuário</a></p>
                                 </div>
                             </div>
                         </li>
@@ -327,9 +329,7 @@
                     <h4 class="section-heading">Pela Web</h4>
                     <br />
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a target="_blank" href="https://www.facebook.com/gabriela.bessa.35"><i class="fa fa-facebook"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -389,9 +389,12 @@
                                         <img class="img-responsive img-centered" src="img/portfolio/mk4.jpg" alt="">
                                     </div>
                                 </div>
-                                <p>Maquete feita na universidade.</p>
+                                <p>
+                                    O trabalho consistia em escolher um arquiteto brasileiro, e consequentemente uma das obras dele.
+                                    A obra escolhida foi a Casa 6 do Arquiteto Marcio Kogan, localizada em São Paulo, construída em 2016.
+                                </p>
                                 <ul class="list-inline">
-                                    <li>Data: Julho 2014</li>
+                                    <li>Data: Novembro 2016</li>
                                 </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Fechar Maquete</button>
                             </div>
@@ -419,6 +422,9 @@
                                 <h2>Sesc Pompéia</h2>
                                 <p class="item-intro text-muted">Maquete do Sesc Pompéia.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/sescPom.jpg" alt="">
+                                <p>
+                                    Data: Outubro de 2016
+                                </p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Fechar Maquete</button>
                             </div>
                         </div>
@@ -455,6 +461,9 @@
                                         <img class="img-responsive img-centered" src="img/portfolio/gor3.png" alt="">
                                     </div>
                                 </div>
+                                <p>
+                                    Projeto da área gourmet da casa dos meus pais.
+                                </p>
                              <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Fechar Projeto</button>
                             </div>
                         </div>
@@ -482,7 +491,10 @@
                                 <h2>Treliça de Macarrão</h2>
                                 <p class="item-intro text-muted">Suportou 7kg no teste feito na universidade.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/treli.jpg" alt="">
-                                <p>Projeto da faculdade que consistia em contruir uma treliça de macarrão capaz de suportar o máximo de peso.</p>
+                                <p>
+                                    Projeto da faculdade que consistia em construir uma treliça de macarrão, capaz de 
+                                    suportar o máximo de peso.
+                                </p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Fechar projeto</button>
                             </div>
                         </div>
