Ajuste no tamanho de imagens

--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Março 2015</h4>
+                                    <h4>Dezembro 2014</h4>
                                     <h4 class="subheading">Desenho Técnico</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Curso com duração de 40 horas pelo SENAC.</p>
+                                    <p class="text-muted">Curso com duração de 30 horas pelo SENAC.</p>
                                 </div>
                             </div>
                         </li>
@@ -203,11 +203,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Abril 2015</h4>
-                                    <h4 class="subheading">AutoCad 2015 – Projetos em 2D</h4>
+                                    <h4>Janeiro 2015</h4>
+                                    <h4 class="subheading">AutoCad – Projetos em 2D</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Curso com duração de 40 horas pelo SENAC.</p>
+                                    <p class="text-muted">Curso com duração de 42 horas pelo SENAC.</p>
                                 </div>
                             </div>
                         </li>
@@ -217,7 +217,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Março 2015</h4>
+                                    <h4>Abril 2015</h4>
                                     <h4 class="subheading">SketchUp 2015</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -236,7 +236,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Loja virtual que vende roupas, artigos e convites para festa e chalkboards.</p>
-                                    <p><a target="_blank" href="https://www.facebook.com/chalkboardboaabessa/">Chalkboard</a></p>
+                                    <p><a target="_blank" href="https://www.facebook.com/chalkboardboaabessa/">Chalkboard e Artigos para Festa</a></p>
                                     <p><a target="_blank" href="https://www.facebook.com/boaabessa/">Vestuário</a></p>
                                 </div>
                             </div>
@@ -364,18 +364,16 @@
                                 <p class="item-intro text-muted">Maquete da casa 6 de Marcio Kogan.</p>
                                 <div class="row">
                                     <div class="col-md-6 col-sm-6">
-                                        Maquete
+                                        <figure class="figure">
+                                            <figcaption class="figure-caption text-right"><h4>Maquete</h4></figcaption>
+                                            <img class="img-responsive img-centered" src="img/portfolio/mk3.jpg" alt="">
+                                        </figure>
                                     </div>
                                     <div class="col-md-6 col-sm-6">
-                                        Real
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6 col-sm-6">
-                                        <img class="img-responsive img-centered" src="img/portfolio/mk3.jpg" alt="">
-                                    </div>
-                                    <div class="col-md-6 col-sm-6">
-                                        <img class="img-responsive img-centered" src="img/portfolio/mkreal.jpeg" alt="">
+                                        <figure class="figure">
+                                            <figcaption class="figure-caption text-right"><h4>Real</h4></figcaption>
+                                            <img class="img-responsive img-centered" src="img/portfolio/mkreal.jpg" alt="">
+                                        </figure>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -422,9 +420,9 @@
                                 <h2>Sesc Pompéia</h2>
                                 <p class="item-intro text-muted">Maquete do Sesc Pompéia.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/sescPom.jpg" alt="">
-                                <p>
+                                <h5>
                                     Data: Outubro de 2016
-                                </p>
+                                </h5>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Fechar Maquete</button>
                             </div>
                         </div>
@@ -451,19 +449,19 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Área Gourmet - Sketchup</h2>
                                 <div class="row">
-                                    <div class="col-md-4 col-sm-4">
-                                        <img class="img-responsive img-centered" src="img/portfolio/gor1.png" alt="">
+                                    <div class="col-md-6 col-sm-6">
+                                        <img class="img-responsive img-centered" src="img/portfolio/gor1.jpg" alt="">
                                     </div>
-                                    <div class="col-md-4 col-sm-4">
-                                        <img class="img-responsive img-centered" src="img/portfolio/gor2.png" alt="">
+                                    <div class="col-md-6 col-sm-6">
+                                        <img class="img-responsive img-centered" src="img/portfolio/gor2.jpg" alt="">
                                     </div>
-                                    <div class="col-md-4 col-sm-4">
-                                        <img class="img-responsive img-centered" src="img/portfolio/gor3.png" alt="">
+                                    <div class="col-md-6 col-sm-6">
+                                        <img class="img-responsive img-centered" src="img/portfolio/gor3.jpg" alt="">
                                     </div>
                                 </div>
-                                <p>
+                                <h5>
                                     Projeto da área gourmet da casa dos meus pais.
-                                </p>
+                                </h5>
                              <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Fechar Projeto</button>
                             </div>
                         </div>
@@ -521,9 +519,6 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
-                                <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -550,9 +545,6 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
-                                <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
