--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Área Gourmet - Sketchup</h2>
+                                <p class="item-intro text-muted">Projeto da área gourmet da casa dos meus pais.</p>
                                 <div class="row">
                                     <div class="col-md-6 col-sm-6">
                                         <img class="img-responsive img-centered" src="img/portfolio/gor1.jpg" alt="">
@@ -459,9 +460,6 @@
                                         <img class="img-responsive img-centered" src="img/portfolio/gor3.jpg" alt="">
                                     </div>
                                 </div>
-                                <h5>
-                                    Projeto da área gourmet da casa dos meus pais.
-                                </h5>
                              <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Fechar Projeto</button>
                             </div>
                         </div>
