--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Março 2015</h4>
+                                    <h4>Novembro 2015</h4>
                                     <h4 class="subheading">Criação da Boa a Bessa</h4>
                                 </div>
                                 <div class="timeline-body">
